Popup sub menu missing margins fix

--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -170,7 +170,7 @@ stage {
   color: TEXT-PRIMARY-COLOR;
   box-shadow: inset 0 0 0 1px BORDER-SHADOW;
   border-radius: 0 0 12px 12px;
-  margin: 0 0 2px 0;
+  margin: 0 1.5px 2px 1.5px;
 }
 
 .popup-sub-menu .popup-menu-item {
